--- a/Final/Main Notebook/Main_Notebook.ipynb
+++ b/Final/Main Notebook/Main_Notebook.ipynb
@@ -526,7 +526,7 @@
       },
       "source": [
         "---\n",
-        "## It'll look better and intuitive on G◕‿◕gle Colab Environment ✿\n",
+        "## It'll look better and intuitive on Google Colab Environment (◕‿◕✿)\n",
         "\n",
         "---"
       ]
